k8s/service4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service
  labels:
    app: my-service
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: my-service               # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: my-service               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - name: my-service # ім'я контейнеру
          image: my-service:latest      # образ Docker
          imagePullPolicy: IfNotPresent   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди
